fixed scrollbar in imprint and legal

--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,5 +1,9 @@
 @import './../../styles.scss';
 
+*::-webkit-scrollbar-track {
+    background: $bc-primary;
+}
+
 .imprint {
     height: calc(100svh - 100px);
     background: #FFFCF3;
